# ohPlayer

./: .gitignore  CMakeLists.txt  License.txt  MakeRelease.pl  MitLicense.txt  README  conanfile.txt  default.nix  go  go.bat  wscript
.github/workflows/: build.yml  os-test.yml
Win32/: .gitignore  AudioDriver.cpp  AudioDriver.h  AudioSessionEvents.cpp  AudioSessionEvents.h  Config.docx  ConfigRegStore.cpp  ConfigRegStore.h  ControlPointProxy.cpp  ControlPointProxy.h  CustomMessages.h  ExampleMediaPlayer.cpp  ExampleMediaPlayer.h  IMFCodec.cpp  LitePipeSampleAppEULA.txt  LitePipeTestApp.cpp  LitePipeTestApp.propdesc  LitePipeTestApp.rc  LitePipeTestApp.sln  LitePipeTestApp.vcproj  LitePipeTestApp.vcxproj  LitePipetestApp.vcxproj  MediaPlayerIF.cpp  MediaPlayerIF.h  MemoryCheck.h  OHPlayerByteStream.cpp  OHPlayerByteStream.h  OpenHomeMediaPlayer.vcproj  OpenHomePlayer.cpp  OpenHomePlayer.rc  OpenHomePlayer.sln  OpenHomePlayer.vcxproj  OpenHomePlayerEULA.txt  OptionalFeatures.h  ProcessorPcmWASAPI.cpp  ProcessorPcmWASAPI.h  Queue.h  RamStore.cpp  RamStore.h  UpdateCheck.cpp  (+13 more)
Win32Installer/: .gitignore  LitePipeSampleAppInstaller.iss  OpenHomePlayerInstaller.iss
linux/: .gitignore  ConfigGTKKeyStore.cpp  ConfigGTKKeyStore.h  ControlPointProxy.cpp  ControlPointProxy.h  DriverAlsa.cpp  DriverAlsa.h  ExampleMediaPlayer.cpp  ExampleMediaPlayer.h  GeneratePkg.pl  Installer-Template.txt  Libav.cpp  LitePipeTestApp.cpp  LitePipeTestApp.h  Makefile  Makefile.combined  Makefile.raspbian  Makefile.ubuntu  MediaPlayerIF.cpp  MediaPlayerIF.h  OpenHomePlayer.cpp  OpenHomePlayer.h  RamStore.cpp  RamStore.h  UpdateCheck.cpp  UpdateCheck.h  Volume.cpp  Volume.h  changelog  diffs.txt  version.h
osx/: .gitignore  getdeps.sh
osx/OpenHomePlayer/: AFSCodec.cpp  AppDelegate.h  AppDelegate.mm  ConfigPersistentStore.h  ConfigPersistentStore.mm  ConfigRamStore.cpp  ControlPointProxy.cpp  ControlPointProxy.h  Distribution.xml  DriverOsx.cpp  DriverOsx.h  ExampleMediaPlayer.h  ExampleMediaPlayer.mm  IconOpenHome.h  Info.plist  License.txt  MediaPlayerIF.h  MediaPlayerIF.mm  PcmHandler.cpp  PcmHandler.h  (+8 more)
osx/OpenHomePlayer.xcodeproj/: project.pbxproj
projectdata/: dependencies.json  ohdevtools.json
raspian/: .gitignore  ConfigGTKKeyStore.cpp  ConfigGTKKeyStore.h  ControlPointProxy.cpp  CustomMessages.h  DriverAlsa.cpp  DriverAlsa.h  ExampleMediaPlayer.cpp  ExampleMediaPlayer.h  GeneratePkg.pl  LitePipeTestApp.cpp  LitePipeTestApp.h  Makefile  Makefile.raspbian  MediaPlayerIF.cpp  MediaPlayerIF.h  UpdateCheck.cpp  Volume.cpp  Volume.h  gtk-main.cpp  gtk-main.h  mediaPlayerIF.cpp  mediaPlayerIF.h
(+68 files in other folders)
